@@ -5,8 +5,6 @@
 
 package net.minecraftforge.event.entity;
 
-import com.google.common.collect.ImmutableList;
-
 import net.minecraft.core.Holder;
 import net.minecraft.world.entity.EntityType;
 import net.minecraft.world.entity.LivingEntity;
@@ -15,23 +13,23 @@ import net.minecraft.world.entity.ai.attributes.AttributeSupplier;
 import net.minecraft.world.entity.ai.attributes.DefaultAttributes;
 import net.minecraftforge.eventbus.api.bus.BusGroup;
 import net.minecraftforge.eventbus.api.bus.EventBus;
-import net.minecraftforge.fml.event.IModBusEvent;
+import net.minecraftforge.eventbus.api.event.MutableEvent;
 import net.minecraftforge.registries.ForgeRegistries;
 
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
 
 /**
  * EntityAttributeModificationEvent.<br>
  * Use this event to add attributes to existing entity types.
  * This event is fired after registration and before common setup, and after {@link EntityAttributeCreationEvent}
- * <br>
- * Fired on the Mod bus {@link IModBusEvent}.<br>
  **/
-public final class EntityAttributeModificationEvent implements IModBusEvent {
+public final class EntityAttributeModificationEvent extends MutableEvent {
+    public static final EventBus<EntityAttributeModificationEvent> BUS = EventBus.create(EntityAttributeModificationEvent.class);
+
+    @Deprecated(forRemoval = true, since = "1.21.9")
     public static EventBus<EntityAttributeModificationEvent> getBus(BusGroup modBusGroup) {
-        return IModBusEvent.getBus(modBusGroup, EntityAttributeModificationEvent.class);
+        return BUS;
     }
 
     private final Map<EntityType<? extends LivingEntity>, AttributeSupplier.Builder> entityAttributes;
@@ -40,11 +38,11 @@ public final class EntityAttributeModificationEvent implements IModBusEvent {
     @SuppressWarnings("unchecked")
     public EntityAttributeModificationEvent(Map<EntityType<? extends LivingEntity>, AttributeSupplier.Builder> mapIn) {
         this.entityAttributes = mapIn;
-        this.entityTypes = ImmutableList.copyOf(
+        this.entityTypes = List.copyOf(
             ForgeRegistries.ENTITY_TYPES.getValues().stream()
                 .filter(DefaultAttributes::hasSupplier)
                 .map(entityType -> (EntityType<? extends LivingEntity>) entityType)
-                .collect(Collectors.toList())
+                .toList()
         );
     }
 
